Unreviewed, fix `public:` used instead of `private:` in StringHashDumpContext https://bugs.webkit.org/show_bug.cgi?id=310516 rdar://173128913

* Source/WTF/wtf/StringHashDumpContext.h:

Canonical link: https://commits.webkit.org/309736@main